# ai-agent

./: .env.example  README.md  embeddings.md  pyproject.toml
advanced-rag/: REQUIREMENTS.md
ecommerce-agent/: agent_langchain_buildin.py  agent_loop.py  tools.py
ecommerce-agent-with-loop/: agent_loop.py  response_schema.py  tools.py
ecommerce-agent-with-reactprompt/: agent.py  inventory.json
ecommerce-agent-with-reactprompt/scripts/: generate_mock_inventory.py
hello-world/: .gitignore  main.py  pyproject.toml
search-agent/: main.py  response_schema.py  search.py
