[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.14",
    "langchain-agent>=0.1.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openrouter>=0.2.6",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.10.6",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
